# dancing-datacollection

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  SPEC.md  TABGES_STRUCTURE.md  aliases.toml  config.toml  conftest.py  current-context.md  current-tasks.md  debug_diff.py  example_filtered_download.py  notebook.ipynb  prek.toml  project-brief.md  pyproject.toml  ruff.toml  test_load.py
.cursor/rules/: testing.mdc
.github/workflows/: ci.yml
assets/: aliases.toml
config/: aliases.toml  config.toml
dancing_datacollection/: __main__.py  calculations.py  html_canonicalize.py  html_generate.py  main.py  output.py  parsing_base.py  parsing_participants.py  parsing_template.py  parsing_topturnier.py  parsing_utils.py
dancing_datacollection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dancing_datacollection/data_defs/: committee.py  dances.py  final_scoring.py  judge.py  participant.py  results.py  score.py
dancing_datacollection/parsing/: committee.py  deck.py  erg.py  ergwert.py  parsing_utils.py  participant.py  tabges.py  wert_er.py
data/10_05_2024_Jun_II_D_Latein/: deck.htm  erg.htm  ergwert.htm  index.htm  tabges.htm
data/10_05_2024_Kin__C_Latein/: deck.htm  erg.htm  ergwert.htm  index.htm  tabges.htm
data/10_05_2024_Kin__D_Latein/: deck.htm  erg.htm  ergwert.htm  index.htm  tabges.htm
jules-scratch/verification/: test_page.html  verify_frontend.py
python/dancing_datacollection/: __init__.py  __main__.py  _dancing_datacollection.pyi  config.py  html_canonicalize.py  html_generate.py  main.py  output.py
python/dancing_datacollection/data_defs/: dances.py  (+8 more)
src/: assets.rs  i18n.rs  lib.rs  main.rs  models.rs  scraper.rs  sources.rs  storage.rs
src/crawler/: client.rs  manifest.rs
src/models/: skating.rs  validation.rs
src/sources/: dtv_native.rs  dtv_parser.rs  html_gen.rs  mod.rs  topturnier_table.rs
src/storage/: mod.rs
tests/: 10_05_2024_Mas_IV_B_Standard_tabges.htm  47-1005_ot_mas4bstd_deck.htm  47-1005_ot_mas4bstd_index.htm  47-1005_ot_mas4bstd_menu.htm  conftest.py  ergwert_scores_output.txt  failing_competition_urls.txt  index.htm  inspect_competition.ipynb  inspect_extracted_final_scores.py  inspect_name_two.py  integration_tests.rs  test_committee.py  test_committee_extraction.py  test_config_defs.py  test_deck_parsing.py  test_erg_parsing.py  test_html_canonicalize.py  test_html_generate.py  test_html_recreation.py  test_judge_extraction.py  test_output_schema.py  test_parsing.py  test_parsing_utils.py  test_participant_extraction.py  test_roundtrip_html_generation.py  test_score_extraction.py  test_scoring_pipeline.py
tests/15-0407_ot_hgr2astd/: deck.htm  erg.htm  ergwert.htm  index.htm  reconstructed_ergwert.html  tabges.htm  tabges.json  tabges.jsonl
tests/24-0407_wdsfopenlatrisingstars/: deck.htm  erg.htm  ergwert.htm  index.htm  reconstructed_ergwert.html  tabges.htm  tabges.json  tabges.jsonl
tests/3-0407_ot_mas2dlat/: deck.htm  erg.htm  ergwert.htm  index.htm  reconstructed_ergwert.html  tabges.htm  tabges.json  tabges.jsonl
tests/31-0507_ot_hgrcstd/: deck.htm  erg.htm  ergwert.htm  index.htm  reconstructed_ergwert.html  tabges.htm  tabges.json  tabges.jsonl
tests/37-0507_ot_mas1clat/: deck.htm  erg.htm  ergwert.htm  index.htm  reconstructed_ergwert.html  tabges.htm  tabges.json  tabges.jsonl
tests/42-0507_ot_mas1blat/: deck.htm  erg.htm  ergwert.htm  index.htm  reconstructed_ergwert.html  tabges.htm  tabges.json  tabges.jsonl
tests/44-0507_wdsfworldopenlatadult/: deck.htm  erg.htm  ergwert.htm  index.htm  reconstructed_ergwert.html  tabges.htm  tabges.json  tabges.jsonl
tests/47-0507_wdsfopenstdrisingstars/: deck.htm  erg.htm  ergwert.htm  index.htm  reconstructed_ergwert.html  tabges.htm  tabges.json  tabges.jsonl
tests/51-1105_ot_hgr2dstd/: deck.golden.htm  deck.htm  erg.golden.htm  erg.htm  ergwert.golden.htm  ergwert.htm  index.htm  menu.htm  reconstructed_ergwert.html  tabges.golden.htm  tabges.htm  tabges.json  tabges.jsonl  wert_er.htm
tests/52-1105_ot_hgr2cstd/: deck.golden.htm  deck.htm  erg.golden.htm  erg.htm  ergwert.golden.htm  ergwert.htm  index.htm  reconstructed_ergwert.html  tabges.golden.htm  tabges.htm  tabges.json  tabges.jsonl  wert_er.htm
tests/53-1105_ot_hgr2bstd/: deck.golden.htm  deck.htm  erg.golden.htm  erg.htm  ergwert.golden.htm  ergwert.htm  menu.htm  reconstructed_ergwert.html  tabges.golden.htm  tabges.htm  tabges.json  tabges.jsonl  wert_er.htm
tests/54-0507_ot_hgr2bstd/: deck.htm  erg.htm  ergwert.htm  index.htm  reconstructed_ergwert.html  tabges.htm  tabges.json  tabges.jsonl
tests/56-0507_ot_mas1dstd/: deck.htm  erg.htm  ergwert.htm  index.htm  reconstructed_ergwert.html  tabges.htm  tabges.json  tabges.jsonl
tests/61-0607_ot_hgr2alat/: deck.htm  erg.htm  ergwert.htm  index.htm  reconstructed_ergwert.html  tabges.htm  tabges.json  tabges.jsonl
tests/75-0607_wdsfworldopenstdadult/: deck.htm  erg.htm  ergwert.htm  index.htm  reconstructed_ergwert.html  tabges.htm  tabges.json  tabges.jsonl
(+6 files in other folders)
