[package]
name = "dancing-datacollection"
version = "0.1.0"
edition = "2021"

[lib]
name = "dancing_datacollection"
crate-type = ["rlib", "cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.22"
ego-tree = "0.10"
robotstxt = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
url = "2.5"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
