[package]
name = "dancing-datacollection"
version = "0.1.0"
edition = "2021"

[lib]
name = "dancing_datacollection"
crate-type = ["rlib", "cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] } # Python bindings
tokio = { version = "1.0", features = ["full"] } # Async runtime for network and sleeping
reqwest = { version = "0.12", features = ["json"] } # HTTP client for downloading files
scraper = "0.22" # HTML parsing and CSS selectors
ego-tree = "0.10" # Tree structure for scraper
robotstxt = "0.3" # Robots.txt rules checking
serde = { version = "1.0", features = ["derive"] } # Serialization/Deserialization for config
toml = "0.8" # TOML parsing for config.toml
url = "2.5" # URL parsing and joining
clap = { version = "4.5", features = ["derive"] } # CLI argument parsing
anyhow = "1.0" # Error handling
thiserror = "2.0" # Error definition
chrono = { version = "0.4", features = ["serde"] } # Date and time handling
regex = "1.10" # Regex for parsing
log = "0.4" # Logging facade
env_logger = "0.11" # Logger implementation for CLI
