[package]
name = "dancing-datacollection"
version = "0.1.0"
edition = "2021"

[lib]
name = "dancing_datacollection"
crate-type = ["rlib", "cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["chrono"] } # Python bindings
tokio = { version = "1.0", features = ["full"] } # Async runtime for network and sleeping
reqwest = "0.12" # HTTP client
scraper = "0.22" # HTML parsing and CSS selectors
robotstxt = "0.3" # Robots.txt rules checking
serde = { version = "1.0", features = ["derive"] } # Serialization/Deserialization for config
url = "2.5" # URL parsing and joining
clap = { version = "4.5", features = ["derive"] } # CLI argument parsing
anyhow = "1.0" # Error handling
thiserror = "2.0" # Error definition
chrono = { version = "0.4", features = ["serde"] } # Date and time handling
regex = "1.10" # Regex for parsing
log = "0.4" # Logging facade
env_logger = "0.11" # Logger implementation for CLI
serde_json = "1.0"

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
