[project]
name = "dancing-datacollection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "lxml>=5.3.0",
    "pandas>=2.2.2",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
    "pydantic>=2.8.2",
]

[tool.setuptools]
packages = ["dancing_datacollection"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = "tests"

[project.optional-dependencies]
dev = ["pytest>=8.4.2", "ruff>=0.12.1"]

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = ["build", "data", "dancing_datacollection.egg-info", "notebook.ipynb"]
